versioned_docs/version-2.0/server/scaling-out/replication/from-embedded-server.mdx
---
title: "Enabling Replication from an Embedded RavenDB instance to a server instance"
hide_table_of_contents: true
sidebar_label: Replicating from an Embedded instance
sidebar_position: 2
---

import Admonition from '@theme/Admonition';
import Tabs from '@theme/Tabs';
import TabItem from '@theme/TabItem';
import CodeBlock from '@theme/CodeBlock';
import LanguageSwitcher from "@site/src/components/LanguageSwitcher";
import LanguageContent from "@site/src/components/LanguageContent";

# Enabling Replication from an Embedded RavenDB instance to a server instance

[RavenDB's replication](../replication.mdx) works using plain HTTP requests to replicate all changes in one instance of Raven to another instance of Raven. When running in embedded mode, you can't replicate to that instance (since it has no HTTP endpoint, unless you use [Embedded+HTTP mode](../../../server/deployment/embedded.mdx#http-access) but you can replicate from that instance.

Here are the steps to enable that scenario:

* Ensure that the Raven.Bundles.Replication.dll is located in the Plugins directory for your embedded RavenDB instance.
* Execute the following code for every RavenDB instance that you wish to replicate to:

<TabItem value="from_embedded_server_1" label="from_embedded_server_1">
<CodeBlock language="csharp">
{`store
	.DatabaseCommands
	.GlobalAdmin
	.CreateDatabase(
		new DatabaseDocument
			\{
				Id = "Northwind",
				// other configuration options omitted for simplicity
				Settings =
					\{
						\{ Constants.ActiveBundles, "Replication" \}
					\}
			\});
`}
</CodeBlock>
</TabItem>

Now, any changes that you make on the embedded RavenDB instance will be replicated to the remote instance. If you wish to replicate from a remote RavenDB instance to an embedded RavenDB instance:

* Run RavenDB in the [Embedded+HTTP mode](../../../server/deployment/embedded.mdx#http-access)
* Ensure that the Raven.Bundles.Replication.dll is located in the Plugins directory for your embedded RavenDB instance.

And now you can replicate to the embedded instance, not just from it.